--- a/MidiSynthExample/README
+++ b/MidiSynthExample/README
@@ -1,4 +1,6 @@
 A synthesizer that uses a very simple sawtooth oscillator and an
 ADSR envelope. This app is intended to demonstrate how to write
 a synthesizer. Our goal is to encourage developers to use this as 
-a starting point for writinf better sounding synthesizers.
+a starting point for writing better sounding synthesizers.
+
+This sample also demonstrates how to add MIDI support to an application.
