MidiKeyboard: add channel spinner and program control

--- a/MidiKeyboard/res/values/strings.xml
+++ b/MidiKeyboard/res/values/strings.xml
@@ -24,5 +24,26 @@
     <string-array name="receivers">
         <item>"none"</item>
     </string-array>
+    <string name="channel_text">Channel:</string>
+    <string-array name="channels">
+        <item>"1"</item>
+        <item>"2"</item>
+        <item>"3"</item>
+        <item>"4"</item>
+        <item>"5"</item>
+        <item>"6"</item>
+        <item>"7"</item>
+        <item>"8"</item>
+        <item>"9"</item>
+        <item>"10"</item>
+        <item>"11"</item>
+        <item>"12"</item>
+        <item>"13"</item>
+        <item>"14"</item>
+        <item>"15"</item>
+        <item>"16"</item>
+    </string-array>
+
+    <string name="program_text">Program:</string>
 
 </resources>
