--- a/MidiKeyboard/res/values/strings.xml
+++ b/MidiKeyboard/res/values/strings.xml
@@ -16,6 +16,8 @@
 
 <resources>
 
+    <string name="versionName">1.3</string>
+
     <string name="app_name">MIDIKeyboard</string>
     <string name="about_app">MIDI Keyboard View</string>
     <string name="title_activity_synth_setup">MIDI Keyboard</string>
