Update to Android 36

--- a/MidiBtlePairing/src/main/res/values/strings.xml
+++ b/MidiBtlePairing/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
 
     <string name="menu_connect">Connect</string>
     <string name="menu_disconnect">Disconnect</string>
+    <string name="menu_refresh">Refresh</string>
     <string name="menu_scan">Scan</string>
     <string name="menu_stop">Stop</string>
 
